# add-snapshots

./: CHANGES  COPYING  MANIFEST  README  aclocal.m4  add.1  add.c  add.h  add.hlp  add.lsm  configure  configure.in  curses.c  makefile.in  makefile.unx  rename.sh  screen.h  xterm.sh
package/: add.spec
package/debian/: changelog  control  copyright  rules  watch
porting/: descrip.mms  vms_link.opt
testing/: README  case00.ref  case01.add  case01.ref  case02-64.ref  case02.add  case02.ref  case03.add  case03.ref  case04.add  case04.opt  case04.ref  case05.add  case05.ref  case06-64.ref  case06.add  case06.ref  case07.add  case07.ref  case08.opt  case08.ref  case09.add  case09.ref  case10.add  case10.ref  case11.opt  case11.ref  case12.add  case12.ref  case13-64.ref  case13.opt  case13.ref  case14.add  case14.opt  case14.ref  run_test.sh  showCC  testCC
