dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.23 2015/07/05 01:01:02 tom Exp $
AC_REVISION($Revision: 1.23 $)
AC_PREREQ(2.52.20011201)
AC_INIT(add.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE

AC_ARG_PROGRAM

CF_PROG_CC
AC_PROG_INSTALL

CF_MAKE_TAGS
CF_PROG_LINT

AC_HEADER_STDC
AC_CHECK_HEADERS(\
getopt.h \
stdlib.h \
string.h \
unistd.h \
)
CF_GETOPT_HEADER

CF_DISABLE_ECHO
CF_ENABLE_WARNINGS

CF_XOPEN_SOURCE
CF_WITH_CURSES_DIR
CF_WITH_NCURSES_ETC
CF_WITH_MAN2HTML

CF_DISABLE_LEAKS

AC_CHECK_FUNCS(\
getcwd \
getopt \
)

CF_CURSES_FUNCS(\
COLOR_PAIR \
beep \
bkgd \
define_key \
flash \
keypad \
typeahead \
wsetscrreg \
)

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(add,1)
