dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.33 2024/09/15 23:47:01 tom Exp $
dnl ---------------------------------------------------------------------------
dnl
dnl Copyright 1995-2023,2024 by Thomas E. Dickey
dnl
dnl                         All Rights Reserved
dnl
dnl Permission is hereby granted, free of charge, to any person obtaining a
dnl copy of this software and associated documentation files (the
dnl "Software"), to deal in the Software without restriction, including
dnl without limitation the rights to use, copy, modify, merge, publish,
dnl distribute, sublicense, and/or sell copies of the Software, and to
dnl permit persons to whom the Software is furnished to do so, subject to
dnl the following conditions:
dnl 
dnl The above copyright notice and this permission notice shall be included
dnl in all copies or substantial portions of the Software.
dnl 
dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
dnl OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
dnl MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
dnl IN NO EVENT SHALL THE ABOVE LISTED COPYRIGHT HOLDER(S) BE LIABLE FOR ANY
dnl CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
dnl TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
dnl SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
dnl 
dnl Except as contained in this notice, the name(s) of the above copyright
dnl holders shall not be used in advertising or otherwise to promote the
dnl sale, use or other dealings in this Software without prior written
dnl authorization.
dnl
dnl ---------------------------------------------------------------------------
AC_REVISION($Revision: 1.33 $)
AC_PREREQ(2.52.20240618)
AC_INIT(add.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE

CF_WITH_SYSTYPE

AC_ARG_PROGRAM

CF_PROG_CC
AC_PROG_INSTALL

CF_MAKE_PHONY
CF_MAKE_TAGS
CF_PROG_LINT
CF_PKG_CONFIG

AC_CHECK_DECL(exit)
CF_GETOPT_HEADER
CF_LOCALECONV

CF_DISABLE_ECHO

CF_WITH_SCREEN_PDCURSES
CF_ENABLE_WARNINGS

CF_XOPEN_SOURCE
CF_WITH_CURSES_DIR
CF_WITH_NCURSES_ETC
CF_WITH_MAN2HTML

CF_DISABLE_LEAKS

AC_CHECK_FUNCS(\
getcwd \
getopt \
)

CF_CURSES_FUNCS(\
COLOR_PAIR \
beep \
bkgd \
define_key \
flash \
keypad \
typeahead \
wsetscrreg \
)

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(add,1)
